@@ -25,12 +25,12 @@ Show the revision of program.
 Start in debug mode.
 .SH "SEE ALSO" 
 .PP 
-/usr/share/doc/itaka/README.gz
+README file in source or on Debian systems: /usr/share/doc/itaka/README.gz
 .SH "AUTHOR" 
 .PP 
 Itaka was written by: Marc E. <santusmarc@users.sf.net>
 .PP 
-This manual page was written by Marc E. santusmarc@users.sf.net for 
+This manual page was written by Marc E. <santusmarc@users.sourceforge.net> for 
 the \fBDebian\fP system (but may be used by others).  Permission is 
 granted to copy, distribute and/or modify this document under 
 the terms of the GNU General Public License, Version 2 any  
