@@ -12,8 +12,9 @@
 
 0.2.2:
  * Fixed a fatal bug with Python 2.6/PyGTK 2.14
- * Simplified and improved Makefile
  * Fixed an issue with the right images showing up in notifications
+ * Fixed an fatal issue with starting Itaka from unexistant directories
+ * Vastly improved Makefile to support installation on different PREFIX
 
 0.2.1:
  * Fixed a serious security bug in which /screenshot prompted no auth. Also
